# rkv

./: .appveyor.yml  .gitattributes  .rustfmt.toml  .travis.yml  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
examples/: README.md  iterator.rs  simple-store.rs
proposal/: store.rs  writer.rs
src/: backend.rs  env.rs  error.rs  helpers.rs  integer.rs  lib.rs  manager.rs  migrate.rs  migrator.rs  multirw.rs  readwrite.rs  store.rs  value.rs
src/backend/: common.rs  impl_safe.rs  impl_sqlite.rs  traits.rs
src/backend/impl_lmdb/: arch_migrator.rs  cursor.rs  database.rs  environment.rs  error.rs  flags.rs  iter.rs  transaction.rs
src/backend/impl_safe/: cursor.rs  database.rs  environment.rs  error.rs  flags.rs  snapshot.rs  transaction.rs
src/backend/impl_sqlite/: arch_migrator_error.rs  cursor.rs  database.rs  environment.rs  error.rs  flags.rs  info.rs  iter.rs  transaction.rs
src/store/: integer.rs  integermulti.rs  mod.rs  multi.rs  single.rs
tests/: env-all.rs  env-lmdb.rs  env-migration.rs  env-safe.rs  integer-store.rs  manager.rs  multi-integer-store.rs  ref_dump.txt  test_txn.rs
tests/envs/: ref_dump.txt  ref_dump_subdb.txt
tests/envs/ref_env_32/: data.mdb  lock.mdb
tests/envs/ref_env_64/: data.mdb  lock.mdb
tests/ref_env_32/: data.mdb  lock.mdb
tests/ref_env_64/: data.mdb  lock.mdb
