[package]
authors = [
  "Richard Newman <rnewman@twinql.com>",
  "Nan Jiang <najiang@mozilla.com>",
  "Myk Melez <myk@mykzilla.org>",
  "Victor Porof <vporof@mozilla.com>",
]
categories = ["database"]
description = "A simple, humane, typed key-value storage solution"
documentation = "https://docs.rs/rkv"
edition = "2018"
exclude = ["/tests/envs/*"]
homepage = "https://github.com/mozilla/rkv"
keywords = ["lmdb", "database", "storage"]
license = "Apache-2.0"
name = "rkv"
readme = "README.md"
repository = "https://github.com/mozilla/rkv"
version = "0.19.0"
rust-version = "1.66"

[[bin]]
name = "rand"
path = "src/bin/rand.rs"
required-features = ["lmdb"]

[[bin]]
name = "dump"
path = "src/bin/dump.rs"
required-features = ["lmdb"]

[[test]]
name = "env-all"
required-features = ["lmdb"]

[[test]]
name = "env-lmdb"
required-features = ["lmdb"]

[[test]]
name = "env-migration"
required-features = ["lmdb"]

[features]
lmdb = ["lmdb-rkv"]
db-dup-sort = []
db-int-key = []
default = ["db-dup-sort", "db-int-key"]
no-canonicalize-path = []
with-asan = ["lmdb", "lmdb-rkv/with-asan"]
with-fuzzer = ["lmdb", "lmdb-rkv/with-fuzzer"]
with-fuzzer-no-link = ["lmdb", "lmdb-rkv/with-fuzzer-no-link"]

[dependencies]
arrayref = "0.3"
bincode = "1.0"
bitflags = {version = "2.4.1", features = ["serde"]}
byteorder = "1"
id-arena = "2.2"
lazy_static = "1.1"
lmdb-rkv = { version = "0.14", optional = true }
log = "0.4.20"
ordered-float = "3.0.0"
paste = "1.0.6"
serde = {version = "1.0.144", features = ["derive", "rc"]}
serde_derive = "1.0"
thiserror = "1.0"
url = "2.0"
uuid = "1.0"

[dev-dependencies]
byteorder = "1"
tempfile = "3"
