[package]
authors = [
  "Richard Newman <rnewman@twinql.com>",
  "Nan Jiang <najiang@mozilla.com>",
  "Myk Melez <myk@mykzilla.org>",
  "Victor Porof <vporof@mozilla.com>",
]
categories = ["database"]
description = "A simple, humane, typed key-value storage solution"
documentation = "https://docs.rs/rkv"
edition = "2018"
exclude = ["/tests/envs/*"]
homepage = "https://github.com/mozilla/rkv"
keywords = ["database", "storage"]
license = "Apache-2.0"
name = "rkv"
readme = "README.md"
repository = "https://github.com/mozilla/rkv"
version = "0.19.0"
rust-version = "1.82"

[features]
db-dup-sort = []
db-int-key = []
default = ["db-dup-sort", "db-int-key"]
no-canonicalize-path = []

[dependencies]
arrayref = "0.3"
bincode = "1.0"
bitflags = {version = "2.4.1", features = ["serde"]}
byteorder = "1"
id-arena = "2.2"
lazy_static = "1.1"
log = "0.4.20"
ordered-float = "3.0.0"
paste = "1.0.6"
serde = {version = "1.0.144", features = ["derive", "rc"]}
serde_derive = "1.0"
thiserror = "2.0"
url = "2.0"
uuid = "1.0"

[dev-dependencies]
byteorder = "1"
tempfile = "3"
