[package]
authors = [
  "Richard Newman <rnewman@twinql.com>",
  "Nan Jiang <najiang@mozilla.com>",
  "Myk Melez <myk@mykzilla.org>",
  "Victor Porof <vporof@mozilla.com>",
]
categories = ["database"]
description = "A simple, humane, typed key-value storage solution"
documentation = "https://docs.rs/rkv"
edition = "2018"
exclude = ["/tests/envs/*"]
homepage = "https://github.com/mozilla/rkv"
keywords = ["database", "storage"]
license = "Apache-2.0"
name = "rkv"
readme = "README.md"
repository = "https://github.com/mozilla/rkv"
version = "0.20.0"
rust-version = "1.82"

[features]
db-dup-sort = []
db-int-key = []
default = ["db-dup-sort", "db-int-key"]
no-canonicalize-path = []
malloc-size-of = ["dep:malloc_size_of", "dep:malloc_size_of_derive"]

[dependencies]
arrayref = "0.3"
bincode = "1.0"
bitflags = {version = "2.4.1", features = ["serde"]}
id-arena = "2.2"
lazy_static = "1.1"
log = "0.4.20"
ordered-float = "3.0.0"
serde = {version = "1.0.144", features = ["derive", "rc"]}
serde_derive = "1.0"
thiserror = "2.0"
url = "2.0"
uuid = "1.0"
malloc_size_of_derive = { version = "0.1.3", optional = true }
malloc_size_of = { version = "0.2.2", package = "wr_malloc_size_of", default-features = false, optional = true }

[dev-dependencies]
byteorder = "1"
tempfile = "3"
